# gporca

./: CMakeLists.txt
data/dxl/minidump/: AddPredsInSubqueries.mdp  AggWithSubqArgs.mdp  AllSubqueryWithSubqueryInScalar.mdp  AntiSemiJoin2Select-1.mdp  AntiSemiJoin2Select-2.mdp  AnySubq-With-NonScalarSubqueryChild-1.mdp  AnySubq-With-NonScalarSubqueryChild-2.mdp  AnySubq-With-NonScalarSubqueryChild-3.mdp  AnySubqueryWithAllSubqueryInScalar.mdp  AnySubqueryWithSubqueryInScalar.mdp  AssertOneRowWithCorrelation.mdp  CTEMisAlignedProducerConsumer.mdp  CannotPullGrpColAboveAgg.mdp  CastedInClauseWithMCV.mdp  CollapseNot.mdp  Correlated-AntiSemiJoin.mdp  Correlated-LASJ-With-Outer-Col.mdp  CountAny.mdp  (+120 more)
libgpdbcost/src/: CCostModelGPDB.cpp  CCostModelGPDBLegacy.cpp
libgpopt/: CMakeLists.txt
libgpopt/include/gpopt/: PropertyDerivationUtils.h
libgpopt/include/gpopt/base/: CCastUtils.h  CColumnFactory.h  CDrvdPropRelational.h  CDrvdPropRelationalMock.h  CRewindabilitySpec.h  CUtils.h
libgpopt/include/gpopt/engine/: CJoinStatisticsConfig.h
libgpopt/include/gpopt/metadata/: CTableDescriptor.h
libgpopt/include/gpopt/operators/: CExpression.h  CExpressionHandle.h  CExpressionHandleMock.h  CExpressionMock.h  CExpressionPreprocessor.h  CPhysicalExternalScan.h  CPhysicalScan.h  CPhysicalSpool.h  CScalarArrayCmp.h  CScalarCmp.h  CScalarIsDistinctFrom.h
libgpopt/include/gpopt/translate/: CTranslatorDXLToExpr.h  CTranslatorExprToDXL.h  CTranslatorExprToDXLUtils.h
libgpopt/include/gpopt/xforms/: CJoinOrderDP.h  CJoinOrderMinCard.h
libgpopt/include/libgpopt/: version.h
libgpopt/src/base/: CCastUtils.cpp  CColumnFactory.cpp  CCostContext.cpp  CDefaultComparator.cpp  CDrvdPropRelationalMock.cpp  CPartitionPropagationSpec.cpp  CQueryContext.cpp  CRange.cpp  CReqdPropPlan.cpp  CRewindabilitySpec.cpp  CUtils.cpp  PropertyDerivationUtils.cpp
libgpopt/src/engine/: CEngine.cpp
libgpopt/src/metadata/: CTableDescriptor.cpp
libgpopt/src/operators/: CExpression.cpp  CExpressionHandleMock.cpp  CExpressionMock.cpp  CExpressionPreprocessor.cpp  CLogical.cpp  CLogicalIndexApply.cpp  CLogicalUnion.cpp  CNormalizer.cpp  CPhysicalAgg.cpp  CPhysicalAssert.cpp  CPhysicalComputeScalar.cpp  CPhysicalConstTableGet.cpp  CPhysicalFilter.cpp  CPhysicalHashJoin.cpp  CPhysicalJoin.cpp  CPhysicalMotion.cpp  CPhysicalNLJoin.cpp  CPhysicalPartitionSelector.cpp  CPhysicalSequence.cpp  CPhysicalSequenceProject.cpp  CPhysicalSort.cpp  CPhysicalSpool.cpp  CPhysicalTVF.cpp  CPredicateUtils.cpp  CScalarArrayCmp.cpp  CScalarCmp.cpp  CScalarIsDistinctFrom.cpp  CScalarSubqueryQuantified.cpp
libgpopt/src/search/: CGroupExpression.cpp
libgpopt/src/translate/: CTranslatorDXLToExpr.cpp  CTranslatorExprToDXL.cpp  CTranslatorExprToDXLUtils.cpp
libgpopt/src/xforms/: CJoinOrderDP.cpp  CJoinOrderMinCard.cpp  CSubqueryHandler.cpp  CXformExpandNAryJoinDP.cpp  CXformJoin2IndexApply.cpp  CXformSplitDQA.cpp  CXformUtils.cpp
libnaucrates/src/: CDXLUtils.cpp
server/: CMakeLists.txt
(+73 files in other folders)
